# wlan-optimizer

./: .gitignore  CLAUDE.md  README.md  biome.json  package-lock.json  package.json  serve-spa.py  svelte.config.js  tsconfig.json  vite.config.ts
.claude/: settings.json
.claude/agents/: code-reviewer.md  tester.md
.claude/rules/: phasenmodell.md  rf-modell.md
.github/workflows/: ci.yml
docs/architecture/: ADR-001-Planrestrukturierung.md  Architektur.md  Datenmodell.md  Entscheidungen.md
docs/archive/: Forschungsübersicht  Funktionsliste  MVP‑Backlog  Produktanforderungsdokument (PRD)
docs/plans/: Implementierungsplan.md  (+6 more)
scripts/: .last-report.txt  report-integrity.sh
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/ap_control/: custom_adapter.rs  mod.rs  provider.rs
src-tauri/src/commands/: access_point.rs  ap_model.rs  export.rs  floor.rs  material.rs  measurement.rs  mod.rs  optimization.rs  project.rs  settings.rs  wall.rs
src-tauri/src/db/: connection.rs  error.rs  measurement.rs  migrations.rs  mod.rs  models.rs  optimization.rs
src-tauri/src/db/migrations/: 001_initial_schema.sql  002_seed_materials.sql  003_seed_ap_models.sql
src-tauri/src/export/: image.rs  mod.rs  pdf.rs  project.rs
src-tauri/src/measurement/: calibration.rs  iperf.rs  mod.rs  rssi.rs
src-tauri/src/optimizer/: mod.rs  rules.rs  tests.rs  types.rs
src-tauri/src/platform/: macos.rs  mod.rs
(+287 files in other folders)
