[package]
name = "wlan-optimizer"
version = "0.1.0"
description = "WLAN planning and optimization tool for home networks"
authors = ["WLAN-Optimizer Contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "wlan_optimizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
log = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
